modify file structure

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered">No Fly Zones CDMX</h1>
+          <h1 class="title has-text-centered">No Fly Zones</h1>
         </div>
       </div>
     </section>
