--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,25 @@
 
     <div id="map"></div>
 
-    <section class="section has-background-light">
+    <section class="section">
       <div class="container">
-        <h1 class="subtitle has-text-centered">¿Qué es esto?</h1>
+        <h1 class="subtitle is-4 has-text-centered">¿De qué se trata?</h1>
+
+        <p>La <a href="http://www.sct.gob.mx/fileadmin/DireccionesGrales/DGAC-archivo/modulo3/co-av-23-10-r4.pdf">Circular CO AV-23/10 R4</a> para la operación de un RPAS (dron), en su artículo 7.2, inciso d, dice:</p>
+          <article class="message is-primary">
+            <div class="message-body">
+              El piloto del RPAS no debe operar la aeronave en las zonas prohibidas, restringidas o peligrosas establecidas en la <a href="https://www.dronesolutions.com.mx/files/zonas.pdf">Publicación de Información Aeronáutica</a> de México, Sección ENR 5.1.
+            </div>
+          </article>
+
+        <p>Según la <a href="https://www.dronesolutions.com.mx/files/zonas.pdf">Publicación</a>, la definición de estas zonas es la siguiente:</p>
+        <div class="content">
+          <ul>
+            <li><i>Zona prohibida</i>: No se permite el vuelo de las aeronaves civiles en ningún momento bajo ninguna circunstancia.</li>
+            <li><i>Zona restringida</i>: No está absolutamente prohibido. Se puede llevar a cabo si se cumple con determinadas condiciones.</li>
+            <li><i>Zona peligrosa</i>: Se advierte a los operadores o a los pilotos de las aeronaves de que evalúen los peligros en relación con sus responsabilidades respecto a la seguridad de sus aeronaves.</li>
+          </ul>
+        </div>
       </div>
     </section>
 
